chore: expose db for local development

--- a/deploy/docker-compose.dev.yml
+++ b/deploy/docker-compose.dev.yml
@@ -13,3 +13,8 @@ services:
     environment:
       # Enables autoreload.
       IDENTITY_SOCIALIZER_RELOAD: "True"
+  db:
+    image: postgres:13.3
+    ports:
+      # Exposes database port.
+    - "5432:5432"
