feat: remote envs

--- a/.env.remote
+++ b/.env.remote
@@ -1,4 +1,4 @@
 IDENTITY_SOCIALIZER_RELOAD="True"
 IDENTITY_SOCIALIZER_PORT="8000"
 IDENTITY_SOCIALIZER_ENVIRONMENT="dev"
-IDENTITY_SOCIALIZER_CONTENT_DISCOVERY_URL="http://content_discovery-api-1:9000"
+IDENTITY_SOCIALIZER_CONTENT_DISCOVERY_URL="http://api.content-discovery-luiscusihuaman:9000"
