--- a/deploy/docker-compose.okteto.yml
+++ b/deploy/docker-compose.okteto.yml
@@ -9,7 +9,7 @@ services:
     image: identity_socializer:${IDENTITY_SOCIALIZER_VERSION:-latest}
     restart: always
     env_file:
-    - .env
+    - ../.env.remote
     depends_on:
       db:
         condition: service_healthy
