--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -3,24 +3,27 @@
 name: comment_pr_with_linter_error
 
 on:
-    pull_request:
-      branches: [main, master]
+  pull_request:
+    branches: [main, master]
 
 jobs:
   flake8-lint:
     permissions:
-        contents: read
-        pull-requests: write
+      contents: read
+      pull-requests: write
     runs-on: ubuntu-latest
     name: Linter
     steps:
-      - name: Check out source repository
-        uses: actions/checkout@v3
-      - name: Set up Python environment
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
-      - name: Run linter and comment PR
-        uses: matias-martini/flake8-pr-comments-action@main
-        with:
-          github_token: ${{ github.token }}
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
+    - name: Install deps
+      uses: knowsuchagency/poetry-install@v1
+      env:
+        POETRY_VIRTUALENVS_CREATE: false
+    - name: Run linter and comment PR
+      uses: matias-martini/flake8-pr-comments-action@main
+      with:
+        github_token: ${{ github.token }}
