--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -27,6 +27,6 @@ jobs:
       uses: reviewdog/action-setup@v1
     - name: 🏃‍♂️ Run FLAKE8 LINTER PR
       run: |
-        poetry run flake8| reviewdog -f=flake8 -name="flake8" -efm="%f:%l:%c: %m" -reporter="github-pr-review" -filter-mode="nofilter" -fail-on-error -tee
+        poetry run flake8| reviewdog -name="flake8" -efm="%f:%l:%c: %m" -reporter="github-pr-review" -filter-mode="nofilter" -fail-on-error -tee
       env:
         REVIEWDOG_GITHUB_API_TOKEN: ${{ github.token }}
