--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ httptools = "^0.6.0"
 prometheus-client = "^0.17.0"
 prometheus-fastapi-instrumentator = "6.0.0"
 firebase-admin = "^6.2.0"
+setuptools = "65.5.1"
 
 
 [tool.poetry.dev-dependencies]
