--- a/deploy/docker-compose.okteto.yml
+++ b/deploy/docker-compose.okteto.yml
@@ -52,6 +52,16 @@ services:
     depends_on:
       db:
         condition: service_healthy
+
+  mongo-db:
+    image: mongo:latest
+    ports:
+    - "27017:27017"
+    volumes:
+    - identity_socializer-db-mongo-data:/data/db
+
 volumes:
   identity_socializer-db-data:
     name: identity_socializer-db-data
+  identity_socializer-db-mongo-data:
+    name: identity_socializer-db-mongo-data
