--- a/.env.remote
+++ b/.env.remote
@@ -2,3 +2,4 @@ IDENTITY_SOCIALIZER_RELOAD="True"
 IDENTITY_SOCIALIZER_PORT="8000"
 IDENTITY_SOCIALIZER_ENVIRONMENT="dev"
 IDENTITY_SOCIALIZER_CONTENT_DISCOVERY_URL="http://api.content-discovery-luiscusihuaman:9000"
+IDENTITY_SOCIALIZER_MONGO_HOST="mongodb://mongo-db.identity-socializer-luiscusihuaman"
