--- a/.env_template
+++ b/.env_template
@@ -2,3 +2,4 @@ IDENTITY_SOCIALIZER_RELOAD="True"
 IDENTITY_SOCIALIZER_PORT="8000"
 IDENTITY_SOCIALIZER_ENVIRONMENT="dev"
 IDENTITY_SOCIALIZER_CONTENT_DISCOVERY_URL="http://content_discovery-api-1:9000"
+IDENTITY_SOCIALIZER_MONGO_HOST="mongodb://identity_socializer-mongo-db-1"
