--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ prometheus-fastapi-instrumentator = "6.0.0"
 firebase-admin = "^6.2.0"
 setuptools = "65.5.1"
 mongoengine = "*"
+pytz = "*"
 
 
 [tool.poetry.dev-dependencies]
@@ -44,6 +45,8 @@ anyio = "^3.6.2"
 pytest-env = "^0.8.1"
 httpx = "^0.23.3"
 mongoengine = "*"
+pytz = "*"
+
 
 
 [tool.isort]
