--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -77,7 +77,7 @@ jobs:
       env:
         FIREBASE_CREDENTIALS: ${{secrets.FIREBASE_CREDENTIALS}}
     - name: Run pytest check
-      run: poetry run pytest -vv --cov="identity_socializer" .
+      run: poetry run pytest -vv --cov="identity_socializer" --cov-config .coveragerc .
       env:
         IDENTITY_SOCIALIZER_HOST: "0.0.0.0"
         IDENTITY_SOCIALIZER_DB_HOST: localhost
