feat(db): pgAdmin and mongoadmin

--- a/deploy/docker-compose.okteto.yml
+++ b/deploy/docker-compose.okteto.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: "3.9"
 
 services:
   api:
@@ -9,13 +9,13 @@ services:
     image: identity_socializer:${IDENTITY_SOCIALIZER_VERSION:-latest}
     restart: always
     env_file:
-    - ../.env.remote
+      - ../.env.remote
     depends_on:
       db:
         condition: service_healthy
     ports:
       # Exposes application port.
-    - "8000:8000"
+      - "8000:8000"
     environment:
       IDENTITY_SOCIALIZER_HOST: 0.0.0.0
       IDENTITY_SOCIALIZER_DB_HOST: db
@@ -31,7 +31,7 @@ services:
       POSTGRES_USER: "identity_socializer"
       POSTGRES_DB: "identity_socializer"
     volumes:
-    - identity_socializer-db-data:/var/lib/postgresql/data
+      - identity_socializer-db-data:/var/lib/postgresql/data
     restart: always
     healthcheck:
       test: pg_isready -U identity_socializer
@@ -56,9 +56,33 @@ services:
   mongo-db:
     image: mongo:latest
     ports:
-    - "27017:27017"
+      - "27017:27017"
     volumes:
-    - identity_socializer-db-mongo-data:/data/db
+      - identity_socializer-db-mongo-data:/data/db
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    environment:
+      ME_CONFIG_MONGODB_SERVER: mongo-db
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ""
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ""
+      ME_CONFIG_BASICAUTH_USERNAME: "admin@admin.com"
+      ME_CONFIG_BASICAUTH_PASSWORD: "admin"
+    ports:
+      - "8081:8081"
+    depends_on:
+      - mongo-db
+
+  pgadmin:
+    image: dpage/pgadmin4:8.0
+    environment:
+      PGADMIN_DEFAULT_EMAIL: "admin@admin.com"
+      PGADMIN_DEFAULT_PASSWORD: "admin"
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
 
 volumes:
   identity_socializer-db-data:
