--- a/okteto.yml
+++ b/okteto.yml
@@ -8,9 +8,15 @@ build:
     dockerfile: deploy/Dockerfile
 deploy:
   compose:
-  - file: deploy/docker-compose.okteto.yml
+    - file: deploy/docker-compose.okteto.yml
   endpoints:
-  - path: /
-    service: api
-    port: 8000
+    - path: /
+      service: api
+      port: 8000
+    - path: /mongodb
+      service: mongo-db
+      port: 8081
+    - path: /db
+      service: pgadmin
+      port: 5050
 namespace: identity-socializer-luiscusihuaman
