--- a/deploy/kube/app.yml
+++ b/deploy/kube/app.yml
@@ -2,75 +2,57 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: identity-socializer
-  name: identity-socializer-app
+  namespace: identity-socializer-luiscusihuaman
+  name: api
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: identity-socializer-app
+      app: api
   template:
     metadata:
       labels:
-        app: identity-socializer-app
+        app: api
+        stack.okteto.com/name: identity-socializer
+        stack.okteto.com/service: api
     spec:
       containers:
-      - name: app
-        image: identity_socializer:latest
-        readinessProbe:
-          httpGet:
-            path: /api/health
-            port: api-port
-          initialDelaySeconds: 5
-          periodSeconds: 10
+      - name: api
+        image: $OKTETO_BUILD_API_IMAGE
+        imagePullPolicy: Always
         env:
-        - name: IDENTITY_SOCIALIZER_HOST
-          value: "0.0.0.0"
-        - name: IDENTITY_SOCIALIZER_WORKERS_COUNT
-          value: "10"
+        - name: IDENTITY_SOCIALIZER_CONTENT_DISCOVERY_URL
+          value: http://api.content-discovery-luiscusihuaman:9000
+        - name: IDENTITY_SOCIALIZER_DB_BASE
+          value: identity_socializer
         - name: IDENTITY_SOCIALIZER_DB_HOST
-          value: "identity-socializer-db-service"
-        resources:
-          limits:
-            memory: "200Mi"
-            cpu: "100m"
-        ports:
-        - containerPort: 8000
-          name: api-port
+          value: db
+        - name: IDENTITY_SOCIALIZER_DB_PASS
+          value: identity_socializer
+        - name: IDENTITY_SOCIALIZER_DB_PORT
+          value: "5432"
+        - name: IDENTITY_SOCIALIZER_DB_USER
+          value: identity_socializer
+        - name: IDENTITY_SOCIALIZER_ENVIRONMENT
+          value: dev
+        - name: IDENTITY_SOCIALIZER_HOST
+          value: 0.0.0.0
+        - name: IDENTITY_SOCIALIZER_MONGO_HOST
+          value: mongodb://mongo-db.identity-socializer-luiscusihuaman
+        - name: IDENTITY_SOCIALIZER_PORT
+          value: "8000"
+        - name: IDENTITY_SOCIALIZER_RELOAD
+          value: "True"
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: identity-socializer
-  name: identity-socializer-app-service
+  namespace: identity-socializer-luiscusihuaman
+  name: api
 spec:
   selector:
-    app: identity-socializer-app
+    app: api
   ports:
   - protocol: TCP
-    port: 80
-    targetPort: api-port
-    name: api-port
-
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: identity-socializer-app
-  namespace: identity-socializer
-  labels:
-    name: identity-socializer-app
-spec:
-  rules:
-  - host: identity-socializer.local
-    http:
-      paths:
-      - pathType: Prefix
-        path: "/"
-        backend:
-          service:
-            name: identity-socializer-app-service
-            port:
-              name: api-port
-
----
+    port: 8000
+    targetPort: 8000
