feat(k8): db stateful

--- a/deploy/docker-compose.okteto.yml
+++ b/deploy/docker-compose.okteto.yml
@@ -1,43 +1,43 @@
 version: "3.9"
 
 services:
-  api:
-    build:
-      context: .
-      dockerfile: ./deploy/Dockerfile
-      target: prod
-    image: identity_socializer:${IDENTITY_SOCIALIZER_VERSION:-latest}
-    restart: always
-    env_file:
-    - ../.env.remote
-    depends_on:
-      db:
-        condition: service_healthy
-    ports:
-      # Exposes application port.
-    - "8000:8000"
-    environment:
-      IDENTITY_SOCIALIZER_HOST: 0.0.0.0
-      IDENTITY_SOCIALIZER_DB_HOST: db
-      IDENTITY_SOCIALIZER_DB_PORT: 5432
-      IDENTITY_SOCIALIZER_DB_USER: identity_socializer
-      IDENTITY_SOCIALIZER_DB_PASS: identity_socializer
-      IDENTITY_SOCIALIZER_DB_BASE: identity_socializer
-
-  db:
-    image: postgres:13.8-bullseye
-    environment:
-      POSTGRES_PASSWORD: "identity_socializer"
-      POSTGRES_USER: "identity_socializer"
-      POSTGRES_DB: "identity_socializer"
-    volumes:
-    - identity_socializer-db-data:/var/lib/postgresql/data
-    restart: always
-    healthcheck:
-      test: pg_isready -U identity_socializer
-      interval: 2s
-      timeout: 3s
-      retries: 40
+#  api:
+#    build:
+#      context: .
+#      dockerfile: ./deploy/Dockerfile
+#      target: prod
+#    image: identity_socializer:${IDENTITY_SOCIALIZER_VERSION:-latest}
+#    restart: always
+#    env_file:
+#    - ../.env.remote
+#    depends_on:
+#      db:
+#        condition: service_healthy
+#    ports:
+#      # Exposes application port.
+#    - "8000:8000"
+#    environment:
+#      IDENTITY_SOCIALIZER_HOST: 0.0.0.0
+#      IDENTITY_SOCIALIZER_DB_HOST: db
+#      IDENTITY_SOCIALIZER_DB_PORT: 5432
+#      IDENTITY_SOCIALIZER_DB_USER: identity_socializer
+#      IDENTITY_SOCIALIZER_DB_PASS: identity_socializer
+#      IDENTITY_SOCIALIZER_DB_BASE: identity_socializer
+#
+#  db:
+#    image: postgres:13.8-bullseye
+#    environment:
+#      POSTGRES_PASSWORD: "identity_socializer"
+#      POSTGRES_USER: "identity_socializer"
+#      POSTGRES_DB: "identity_socializer"
+#    volumes:
+#    - identity_socializer-db-data:/var/lib/postgresql/data
+#    restart: always
+#    healthcheck:
+#      test: pg_isready -U identity_socializer
+#      interval: 2s
+#      timeout: 3s
+#      retries: 40
 
   migrator:
     image: ${OKTETO_BUILD_API_IMAGE}
@@ -49,9 +49,9 @@ services:
       IDENTITY_SOCIALIZER_DB_USER: identity_socializer
       IDENTITY_SOCIALIZER_DB_PASS: identity_socializer
       IDENTITY_SOCIALIZER_DB_BASE: identity_socializer
-    depends_on:
-      db:
-        condition: service_healthy
+#    depends_on:
+#      db:
+#        condition: service_healthy
 
   mongo-db:
     image: mongo:latest
@@ -81,8 +81,8 @@ services:
       PGADMIN_DEFAULT_PASSWORD: "admin"
     ports:
     - "5050:80"
-    depends_on:
-    - db
+#    depends_on:
+#    - db
 
 volumes:
   identity_socializer-db-data:
