--- a/deploy/kube/db.yml
+++ b/deploy/kube/db.yml
@@ -1,74 +1,93 @@
 ---
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
-  namespace: identity-socializer
-  name: identity-socializer-db
+  name: db
+  namespace: identity-socializer-luiscusihuaman
 spec:
+  replicas: 1
   selector:
     matchLabels:
-      app: identity-socializer-db
+      stack.okteto.com/name: identity-socializer
+      stack.okteto.com/service: db
+  serviceName: db
   template:
     metadata:
       labels:
-        app: identity-socializer-db
+        stack.okteto.com/name: identity-socializer
+        stack.okteto.com/service: db
     spec:
       containers:
-      - name: database
-        image: postgres:13.8-bullseye
-        resources:
-          limits:
-            memory: "300Mi"
-            cpu: "200m"
-        env:
-        - name: POSTGRES_PASSWORD
-          value: "identity_socializer"
-        - name: POSTGRES_USER
-          value: "identity_socializer"
-        - name: POSTGRES_DB
-          value: "identity_socializer"
-        ports:
-        - containerPort: 5432
+        - env:
+            - name: POSTGRES_DB
+              value: identity_socializer
+            - name: POSTGRES_PASSWORD
+              value: identity_socializer
+            - name: POSTGRES_USER
+              value: identity_socializer
+          image: postgres:13.8-bullseye
+          imagePullPolicy: IfNotPresent
+          name: db
+          readinessProbe:
+            exec:
+              command:
+                - pg_isready
+                - -U
+                - identity_socializer
+            failureThreshold: 40
+            periodSeconds: 2
+            successThreshold: 1
+            timeoutSeconds: 3
+          volumeMounts:
+            - mountPath: /var/lib/postgresql/data
+              name: identity-socializer-db-data
+              subPath: identity-socializer-db-data
+      volumes:
+        - name: identity-socializer-db-data
+          persistentVolumeClaim:
+            claimName: identity-socializer-db-data
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: identity-socializer
-  name: "identity-socializer-db-service"
+  namespace: identity-socializer-luiscusihuaman
+  name: db
 spec:
   selector:
-    app: identity-socializer-db
+    stack.okteto.com/name: identity-socializer
+    stack.okteto.com/service: db
   ports:
-  - port: 5432
-    targetPort: 5432
+    - port: 5432
+      protocol: TCP
+      targetPort: 5432
 ---
-apiVersion: batch/v1
-kind: Job
-metadata:
-  namespace: identity-socializer
-  name: identity-socializer-migrator
-spec:
-  ttlSecondsAfterFinished: 100
-  template:
-    spec:
-      containers:
-      - name: migrator
-        image: identity_socializer:latest
-        command:
-        - "alembic"
-        - "upgrade"
-        - "head"
-        resources:
-          limits:
-            memory: "200Mi"
-            cpu: "250m"
-        env:
-        - name: "IDENTITY_SOCIALIZER_DB_HOST"
-          value: "identity-socializer-db-service"
-      initContainers:
-      - name: wait-for-db
-        image: toschneck/wait-for-it:latest
-        command: ["./wait-for-it.sh", "-t", "60", "identity-socializer-db-service:5432"]
-      restartPolicy: Never
+#apiVersion: batch/v1
+#kind: Job
+#metadata:
+#  namespace: identity-socializer
+#  name: identity-socializer-migrator
+#spec:
+#  ttlSecondsAfterFinished: 100
+#  template:
+#    spec:
+#      containers:
+#      - name: migrator
+#        image: identity_socializer:latest
+#        command:
+#        - "alembic"
+#        - "upgrade"
+#        - "head"
+#        resources:
+#          limits:
+#            memory: "200Mi"
+#            cpu: "250m"
+#        env:
+#        - name: "IDENTITY_SOCIALIZER_DB_HOST"
+#          value: "identity-socializer-db-service"
+#      initContainers:
+#      - name: wait-for-db
+#        image: toschneck/wait-for-it:latest
+#        command: ["./wait-for-it.sh", "-t", "60", "identity-socializer-db-service:5432"]
+#      restartPolicy: Never
 
 ---
