--- a/okteto.yml
+++ b/okteto.yml
@@ -11,6 +11,7 @@ deploy:
     - echo $OKTETO_BUILD_API_IMAGE
     - envsubst < deploy/kube/app.yml | kubectl apply -f -
     - kubectl apply -f deploy/kube/db.yml
+    - kubectl apply -f deploy/kube/mongodb.yml
   compose:
     - file: deploy/docker-compose.okteto.yml
   endpoints:
@@ -18,7 +19,7 @@ deploy:
 #      service: api
 #      port: 8000
     - path: /mongodb
-      service: mongo-db
+      service: mongo-express
       port: 8081
     - path: /db
       service: pgadmin
