--- a/okteto.yml
+++ b/okteto.yml
@@ -10,7 +10,7 @@ deploy:
   commands:
     - echo $OKTETO_BUILD_API_IMAGE
     - envsubst < deploy/kube/app.yml | kubectl apply -f -
-    - kubectl apply -f deploy/kube/db.yml
+    - envsubst < deploy/kube/db.yml | kubectl apply -f -
     - kubectl apply -f deploy/kube/mongodb.yml
   compose:
     - file: deploy/docker-compose.okteto.yml
