--- a/deploy/docker-compose.okteto.yml
+++ b/deploy/docker-compose.okteto.yml
@@ -60,27 +60,27 @@ services:
 #    volumes:
 #    - identity_socializer-db-mongo-data:/data/db
 
-  mongo-express:
-    image: mongo-express
-    restart: always
-    environment:
-      ME_CONFIG_MONGODB_SERVER: mongo-db
-      ME_CONFIG_MONGODB_ADMINUSERNAME: ""
-      ME_CONFIG_MONGODB_ADMINPASSWORD: ""
-      ME_CONFIG_BASICAUTH_USERNAME: "admin@admin.com"
-      ME_CONFIG_BASICAUTH_PASSWORD: "admin"
-    ports:
-    - "8081:8081"
+#  mongo-express:
+#    image: mongo-express
+#    restart: always
+#    environment:
+#      ME_CONFIG_MONGODB_SERVER: mongo-db
+#      ME_CONFIG_MONGODB_ADMINUSERNAME: ""
+#      ME_CONFIG_MONGODB_ADMINPASSWORD: ""
+#      ME_CONFIG_BASICAUTH_USERNAME: "admin@admin.com"
+#      ME_CONFIG_BASICAUTH_PASSWORD: "admin"
+#    ports:
+#    - "8081:8081"
 #    depends_on:
 #    - mongo-db
 
-  pgadmin:
-    image: dpage/pgadmin4:8.0
-    environment:
-      PGADMIN_DEFAULT_EMAIL: "admin@admin.com"
-      PGADMIN_DEFAULT_PASSWORD: "admin"
-    ports:
-    - "5050:80"
+#  pgadmin:
+#    image: dpage/pgadmin4:8.0
+#    environment:
+#      PGADMIN_DEFAULT_EMAIL: "admin@admin.com"
+#      PGADMIN_DEFAULT_PASSWORD: "admin"
+#    ports:
+#    - "5050:80"
 #    depends_on:
 #    - db
 
