--- a/okteto.yml
+++ b/okteto.yml
@@ -12,17 +12,17 @@ deploy:
     - envsubst < deploy/kube/app.yml | kubectl apply -f -
     - envsubst < deploy/kube/db.yml | kubectl apply -f -
     - kubectl apply -f deploy/kube/mongodb.yml
-  compose:
-    - file: deploy/docker-compose.okteto.yml
-  endpoints:
+    - kubectl apply -f deploy/kube/mongo-express.yml
+    - kubectl apply -f deploy/kube/pgadmin.yml
+#  endpoints:
 #    - path: /
 #      service: api
 #      port: 8000
-    - path: /mongodb
-      service: mongo-express
-      port: 8081
-    - path: /db
-      service: pgadmin
-      port: 5050
+#    - path: /mongodb
+#      service: mongo-express
+#      port: 8081
+#    - path: /db
+#      service: pgadmin
+#      port: 5050
 
 namespace: identity-socializer-luiscusihuaman
